--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
        <title>React App</title>
        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
        <script src="https://kit.fontawesome.com/ce8fb37ad3.js" crossorigin="anonymous"></script>
-       <link href="../my-app/public/styles.css" rel="stylesheet" type="text/css">
+       <link href="./styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
       <div id="root"></div>
