--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     ></script>
 
     <!-- Estilos extras -->
-    <link href="./styles.css" rel="stylesheet" type="text/css" />
+    <link href="%PUBLIC_URL%/styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <noscript>Você precisa habilitar o JavaScript para rodar esta aplicação.</noscript>
